# niwa-cli

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md
crates/niwa/: Cargo.toml
crates/niwa-core/: Cargo.toml
crates/niwa-core/migrations/: 001_init.sql  002_add_processed_sessions.sql  003_add_garden_paths.sql  004_add_scope_mappings.sql
crates/niwa-core/src/: db.rs  error.rs  graph.rs  lib.rs  query.rs  storage.rs  types.rs
crates/niwa-generator/: Cargo.toml
crates/niwa-generator/src/: agents.rs  error.rs  generator.rs  lib.rs  prompts.rs  session_log.rs
crates/niwa/src/: main.rs  state.rs
crates/niwa/src/handlers/: crawler.rs  garden.rs  gen.rs  graph.rs  list.rs  mod.rs  relations.rs  search.rs  show.rs  tutorial.rs
crates/niwa/tests/: crawler_test.rs  garden_test.rs
