[workspace]
resolver = "2"
members = [
    "crates/niwa-core",
    "crates/niwa-generator",
    # "crates/niwa-export",
    "crates/niwa",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/niwa-cli"

[workspace.dependencies]
# Internal crates
niwa-core = { path = "crates/niwa-core", version = "0.1.0" }
niwa-generator = { path = "crates/niwa-generator", version = "0.1.0" }
niwa-export = { path = "crates/niwa-export", version = "0.1.0" }

# LLM & Expertise
llm-toolkit = { version = "0.58.0", features = ["agent", "derive"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }

# Async
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI (for later)
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
dialoguer = "0.11"
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
