[package]
name = "niwa-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for NIWA Expertise Graph management"

[dependencies]
# LLM & Expertise
llm-toolkit = { workspace = true }
llm-toolkit-expertise = "0.2.1"

# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"
