[package]
name = "niwa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for NIWA Expertise Graph management"

[[bin]]
name = "niwa"
path = "src/main.rs"

[dependencies]
# Internal crates
niwa-core = { workspace = true }
niwa-generator = { workspace = true }

# CLI Framework
sen = { version = "0.5.0", features = ["sensors", "clap"] }

# LLM
llm-toolkit = { workspace = true, features = ["agent"] }

# CLI utilities
clap = { workspace = true }
comfy-table = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
