[package]
name = "niwa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for NIWA Expertise Graph management"

[[bin]]
name = "niwa"
path = "src/main.rs"

[dependencies]
# Internal crates
niwa-core = { workspace = true }
niwa-generator = { workspace = true }

# CLI Framework
sen = { version = "0.7", features = ["sensors", "clap"] }

# LLM
llm-toolkit = { workspace = true, features = ["agent"] }

# CLI utilities
clap = { workspace = true }
comfy-table = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
sha2 = "0.10"
walkdir = "2.4"
dirs = "5.0"

# Database
sqlx = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
